# R7022E-AI-in-processindustry-and-automation

./: .gitignore  test.ipynb
Lab1_data-preprocess/: tjena.mlx
Lab2_unsupervised/: task1.ipynb  task2.ipynb
Lab3_supervised/: best_model.pth  task1.ipynb  task2.ipynb
Lab4_reinforcement-learning/: PCGym_Lab.ipynb  README.md  custom_reward.py  pyproject.toml  visualization.py
Lab4_reinforcement-learning/r7022_lab_pcgym_2025.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Project/: Problem_1_CSTR.ipynb
