[project]
name = "r7022-lab-pcgym-2025"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "ipywidgets==8.1.8",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pcgym>=0.1.8",
    "rich==14.2.0",
    "stable-baselines3>=2.7.1",
    "tqdm>=4.66",
    "tensorboard==2.20.0",
]

[tool.setuptools]
packages = []